--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,22 +14,16 @@
     --color-darkfg: #ededed;
 }
 
-body {
-    color: var(--foreground);
-    background: var(--background);
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 button {
-    @apply px-4 py-2 font-semibold rounded-md transition cursor-pointer;
+    @apply px-4 py-2 font-semibold rounded-md transition cursor-pointer focus:ring-1 focus:ring-blue-500;
 }
 
 input {
-    @apply border-primary outline-2 outline-offset-2 p-1 rounded-md  mt-2;
+    @apply px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500;
 }
 
 label {
-    @apply font-bold;
+    @apply font-medium;
 }
 
 td {
